spacing fix

--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -187,8 +187,8 @@ textarea:focus, select:focus, option:focus, input[type="text"]:focus, input[type
 
 .title-box {
 	border-bottom-width: 0px;
-	margin-bottom: 75px;
-	margin-top: 100px;
+	margin-bottom: 70px;
+	margin-top: 85px;
 	position: relative;
 }
 
